[tool.poetry]
name = "cloudsend"
version = "0.4.12"
description = "CloudSend is a Python package that allows you to run any script on a cloud service (for now AWS only)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/benbenz/cloudsend"

[tool.poetry.dependencies]
protobuf = "^3.20"
python = "^3.9"
boto3 = "^1"
jcs = "^0.2.1"
pyyaml = "^6.0"
asyncssh = "~2.12.0"
ortools = "^9"
psutil = "^5.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo = 'cloudsend.demo:main'
cli = 'cloudsend.cli:main'
client = 'cloudsend.maestroclient:main'

[tool.pytest.ini_options]
asyncio_mode="strict"
testpaths = [
    "tests"
]
