[tool.poetry]
name = "katapult"
version = "0.6.16"
description = "Katapult is a Python package that allows you to run any script on a cloud service (for now AWS only)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/benbenz/katapult"
include = ["requirements.txt"]

[tool.poetry.dependencies]
# protobuf = "^3.20"
python = "^3.9"
boto3 = "1.26.1"
jcs = "^0.2"
pyyaml = "^6.0"
asyncssh = "~2.12.0"
ortools = "^9.0"
psutil = "^5.9.4"
scriptflow = {version = "^0.2.5", optional = true}
# cryptography = "3.1.1"

[tool.poetry.extras]
scriptflow = ["scriptflow"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
codecov = "^2.1.12"
asynctest = "^0.13.0"
moto = {version = "1.3.16", extras = ["ec2","iam","sts"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo = 'katapult.demo:main'
cli = 'katapult.cli:main'
client = 'katapult.maestroclient:main'

[tool.pytest.ini_options]
asyncio_mode="auto"
testpaths = [
    "tests"
]
