[tool.poetry]
name = "cloudsend"
version = "0.1.0"
description = "CloudSend is a Python package that allows you to run any script on a cloud service (for now AWS only)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/benbenz/cloudsend"

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = { version = "3.1.5", markers = "sys_platform == 'darwin' and platform_release <= '13.4.0'" }
cryptography = { version = "3.1.1", markers = "sys_platform == 'darwin' and platform_release <= '13.4.0'" }
boto3 = [
    { version = "1.23.10"   , markers = "sys_platform == 'darwin' and platform_release <= '13.4.0'" },
    { version = "^1"        , markers = "sys_platform != 'darwin' or platform_release > '13.4.0'" }
]
jcs = "^0.2.1"
pyyaml = "^6.0"
paramiko = "^2.12.0"
ortools = [
    { version = "9.0.9048"    , markers = "sys_platform == 'darwin' and platform_release <= '13.4.0'" },
    { version = "^9"          , markers = "sys_platform != 'darwin' or platform_release > '13.4.0'" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo = 'cloudsend.app:main'

[tool.pytest.ini_options]
asyncio_mode="strict"
testpaths = [
    "tests"
]
